# synaptic

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
crates/synapse/: Cargo.toml
crates/synapse-agents/: Cargo.toml
crates/synapse-agents/src/: lib.rs
crates/synapse-agents/tests/: react_agent.rs
crates/synapse-cache/: Cargo.toml
crates/synapse-cache/src/: cached_model.rs  in_memory.rs  lib.rs  semantic.rs
crates/synapse-cache/tests/: cached_model.rs  in_memory.rs  semantic.rs
crates/synapse-callbacks/: Cargo.toml
crates/synapse-callbacks/src/: composite.rs  lib.rs  stdout.rs  tracing_cb.rs
crates/synapse-callbacks/tests/: composite.rs  recording.rs  stdout.rs  tracing_cb.rs
crates/synapse-chains/: Cargo.toml
crates/synapse-chains/src/: lib.rs
crates/synapse-chains/tests/: sequential.rs
crates/synapse-core/: Cargo.toml
crates/synapse-core/src/: lib.rs
crates/synapse-core/tests/: config.rs  error.rs  message.rs  tool_choice.rs
crates/synapse-embeddings/: Cargo.toml
crates/synapse-embeddings/src/: cached.rs  fake.rs  lib.rs  ollama.rs  openai.rs
crates/synapse-embeddings/tests/: cached.rs  fake.rs  ollama.rs  openai.rs
crates/synapse-eval/: Cargo.toml
crates/synapse-eval/src/: dataset.rs  embedding_distance.rs  evaluator.rs  exact_match.rs  json_validity.rs  lib.rs  llm_judge.rs  regex_match.rs
crates/synapse-eval/tests/: accuracy.rs  dataset.rs  embedding_distance.rs  exact_match.rs  json_validity.rs  llm_judge.rs  regex_match.rs
crates/synapse-graph/: Cargo.toml
crates/synapse-graph/src/: builder.rs  checkpoint.rs  command.rs  compiled.rs  lib.rs  node.rs  prebuilt.rs  send.rs  state.rs  tool_node.rs  visualization.rs
crates/synapse-graph/tests/: builder.rs  checkpoint.rs  command.rs  compiled.rs  get_state.rs  prebuilt.rs  react_agent_options.rs  send.rs  state.rs  stream.rs  tool_node.rs  visualization.rs
crates/synapse-loaders/: Cargo.toml
crates/synapse-loaders/src/: csv_loader.rs  directory_loader.rs  file_loader.rs  json_loader.rs  lib.rs  markdown_loader.rs  text_loader.rs  web_loader.rs
crates/synapse-loaders/tests/: csv_loader.rs  directory_loader.rs  file_loader.rs  json_loader.rs  lazy_load.rs  markdown_loader.rs  text_loader.rs  web_loader.rs
crates/synapse-memory/: Cargo.toml
crates/synapse-memory/src/: buffer.rs  file_history.rs  history.rs  lib.rs  summary.rs  summary_buffer.rs  token_buffer.rs  window.rs
crates/synapse-memory/tests/: buffer.rs  file_history.rs  history.rs  in_memory.rs  summary.rs  summary_buffer.rs  token_buffer.rs  window.rs
crates/synapse-models/: Cargo.toml
crates/synapse-models/src/: anthropic.rs  backend.rs  bound_tools.rs  gemini.rs  lib.rs  ollama.rs  openai.rs  rate_limit.rs  retry.rs  scripted.rs  structured_output.rs  token_bucket.rs
crates/synapse-models/tests/: anthropic.rs  gemini.rs  ollama.rs  openai.rs  rate_limit.rs  retry.rs  structured_output.rs  token_bucket.rs
crates/synapse-parsers/: Cargo.toml
crates/synapse-parsers/src/: boolean_parser.rs  enum_parser.rs  fixing_parser.rs  json_parser.rs  lib.rs  list_parser.rs  markdown_list_parser.rs  numbered_list_parser.rs  retry_parser.rs  str_parser.rs  structured_parser.rs  xml_parser.rs
crates/synapse-parsers/tests/: boolean_parser.rs  enum_parser.rs  fixing_parser.rs  format_instructions.rs  json_parser.rs  list_parser.rs  markdown_list_parser.rs  numbered_list_parser.rs  retry_parser.rs  str_parser.rs  structured_parser.rs  xml_parser.rs
crates/synapse-prompts/: Cargo.toml
crates/synapse-prompts/src/: chat_template.rs  example_selector.rs  few_shot.rs  few_shot_template.rs  lib.rs  template.rs
crates/synapse-prompts/tests/: chat_template.rs  example_selector.rs  few_shot.rs  few_shot_template.rs  partial_variables.rs  prompt_template.rs
crates/synapse-retrieval/: Cargo.toml
crates/synapse-retrieval/src/: bm25.rs  compression.rs  ensemble.rs  lib.rs  multi_query.rs  parent_document.rs  self_query.rs
crates/synapse-retrieval/tests/: bm25.rs  compression.rs  ensemble.rs  in_memory.rs  multi_query.rs  parent_document.rs  self_query.rs
crates/synapse-runnables/: Cargo.toml
crates/synapse-runnables/src/: assign.rs  branch.rs  each.rs  fallback.rs  generator.rs  lambda.rs  lib.rs  parallel.rs  passthrough.rs  pick.rs  retry.rs  runnable.rs  sequence.rs
crates/synapse-runnables/tests/: assign_pick.rs  bind.rs  branch.rs  fallback.rs  identity.rs  lambda.rs  parallel.rs  sequence.rs  stream.rs
crates/synapse-splitters/: Cargo.toml
crates/synapse-splitters/src/: html_header.rs  lib.rs  markdown.rs  token.rs
crates/synapse-splitters/tests/: character.rs  html_header.rs  language.rs  markdown.rs  recursive.rs  token.rs
crates/synapse-tools/: Cargo.toml
crates/synapse-tools/src/: handle_error.rs  lib.rs  parallel_executor.rs  return_direct.rs
crates/synapse-tools/tests/: handle_error.rs  parallel_executor.rs  return_direct.rs  serial_executor.rs
crates/synapse-vectorstores/: Cargo.toml
crates/synapse-vectorstores/src/: in_memory.rs  lib.rs  multi_vector.rs
crates/synapse-vectorstores/tests/: in_memory.rs
crates/synapse/src/: lib.rs
crates/synapse/tests/: facade.rs
crates/synaptic-cache/: Cargo.toml
crates/synaptic-cache/src/: lib.rs  semantic.rs
crates/synaptic-cache/tests/: cached_model_extended.rs  in_memory_edge.rs
crates/synaptic-callbacks/: Cargo.toml
crates/synaptic-callbacks/src/: lib.rs  opentelemetry_cb.rs
crates/synaptic-callbacks/tests/: callbacks_extended.rs  otel_callback.rs
crates/synaptic-confluence/: Cargo.toml
crates/synaptic-confluence/src/: lib.rs
crates/synaptic-confluence/tests/: confluence_basic.rs  confluence_config.rs
crates/synaptic-core/: Cargo.toml
crates/synaptic-core/src/: lib.rs
crates/synaptic-core/tests/: message_utils.rs
crates/synaptic-deep/: Cargo.toml
crates/synaptic-deep/src/: lib.rs
crates/synaptic-deepseek/: Cargo.toml
crates/synaptic-embeddings/: Cargo.toml
crates/synaptic-eval/: Cargo.toml
crates/synaptic-fireworks/: Cargo.toml
crates/synaptic-flashrank/: Cargo.toml
(+667 files in other folders)
