[workspace]
members = [
  "crates/synapse-core",
  "crates/synapse-prompts",
  "crates/synapse-tools",
  "crates/synapse-memory",
  "crates/synapse-callbacks",
  "crates/synapse-models",
  "crates/synapse-runnables",
  "crates/synapse-retrieval",
  "crates/synapse-loaders",
  "crates/synapse-eval",
  "crates/synapse-parsers",
  "crates/synapse-splitters",
  "crates/synapse-embeddings",
  "crates/synapse-vectorstores",
  "crates/synapse-graph",
  "crates/synapse-cache",
  "crates/synapse",
  "examples/react_basic",
  "examples/tool_calling_basic",
  "examples/memory_chat",
  "examples/graph_visualization",
  "examples/lcel_chain",
  "examples/prompt_parser_chain",
  "examples/streaming",
  "examples/rag_pipeline",
  "examples/memory_strategy",
  "examples/structured_output",
  "examples/callbacks_tracing",
  "examples/evaluation",
  "examples/caching",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Synapse Contributors"]
rust-version = "1.78"
description = "A Rust agent framework with LangChain-compatible architecture"
repository = "https://github.com/AIMOverse/synapse"
homepage = "https://github.com/AIMOverse/synapse"
keywords = ["ai", "agent", "langchain", "llm", "rag"]
categories = ["science"]

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
async-stream = "0.3"
eventsource-stream = "0.2"
bytes = "1"
csv = "1.3"
regex = "1"
base64 = "0.22"
