[workspace]
members = [
  "crates/synaptic-core",
  "crates/synaptic-prompts",
  "crates/synaptic-tools",
  "crates/synaptic-memory",
  "crates/synaptic-callbacks",
  "crates/synaptic-models",
  "crates/synaptic-openai",
  "crates/synaptic-anthropic",
  "crates/synaptic-gemini",
  "crates/synaptic-ollama",
  "crates/synaptic-runnables",
  "crates/synaptic-retrieval",
  "crates/synaptic-loaders",
  "crates/synaptic-eval",
  "crates/synaptic-parsers",
  "crates/synaptic-splitters",
  "crates/synaptic-embeddings",
  "crates/synaptic-vectorstores",
  "crates/synaptic-graph",
  "crates/synaptic-cache",
  "crates/synaptic-middleware",
  "crates/synaptic-store",
  "crates/synaptic-mcp",
  "crates/synaptic-macros",
  "crates/synaptic-deep",
  "crates/synaptic-qdrant",
  "crates/synaptic-pgvector",
  "crates/synaptic-redis",
  "crates/synaptic-pdf",
  "crates/synaptic-bedrock",
  "crates/synaptic-cohere",
  "crates/synaptic-perplexity",
  "crates/synaptic-pinecone",
  "crates/synaptic-chroma",
  "crates/synaptic-mongodb",
  "crates/synaptic-elasticsearch",
  "crates/synaptic-sqlite",
  "crates/synaptic-tavily",
  "crates/synaptic-groq",
  "crates/synaptic-together",
  "crates/synaptic-fireworks",
  "crates/synaptic-mistral",
  "crates/synaptic-deepseek",
  "crates/synaptic-huggingface",
  "crates/synaptic-voyage",
  "crates/synaptic-nomic",
  "crates/synaptic-jina",
  "crates/synaptic-weaviate",
  "crates/synaptic-xai",
  "crates/synaptic-sqltoolkit",
  "crates/synaptic-e2b",
  "crates/synaptic-confluence",
  "crates/synaptic-slack",
  "crates/synaptic-milvus",
  "crates/synaptic-opensearch",
  "crates/synaptic-lancedb",
  "crates/synaptic-flashrank",
  "crates/synaptic-langfuse",
  "crates/synaptic",
  "examples/react_basic",
  "examples/tool_calling_basic",
  "examples/memory_chat",
  "examples/graph_visualization",
  "examples/lcel_chain",
  "examples/prompt_parser_chain",
  "examples/streaming",
  "examples/rag_pipeline",
  "examples/memory_strategy",
  "examples/structured_output",
  "examples/callbacks_tracing",
  "examples/evaluation",
  "examples/caching",
  "examples/macros_showcase",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.2.6"
license = "MIT"
authors = ["Synaptic Contributors"]
rust-version = "1.88"
description = "A Rust agent framework with LangChain-compatible architecture"
repository = "https://github.com/dnw3/synaptic"
homepage = "https://dnw3.github.io/synaptic/"
readme = "README.md"
keywords = ["ai", "agent", "langchain", "llm", "rag"]
categories = ["science"]

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
reqwest = { version = "0.13", features = ["json", "stream", "query"] }
futures = "0.3"
async-stream = "0.3"
eventsource-stream = "0.2"
bytes = "1"
csv = "1.3"
regex = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
schemars = { version = "1", features = ["derive"] }
synaptic-core = { version = "0.2", path = "crates/synaptic-core" }
synaptic-mcp = { version = "0.2", path = "crates/synaptic-mcp" }
synaptic-macros = { version = "0.2", path = "crates/synaptic-macros" }
synaptic-middleware = { version = "0.2", path = "crates/synaptic-middleware" }
synaptic-runnables = { version = "0.2", path = "crates/synaptic-runnables" }
synaptic-deep = { version = "0.2", path = "crates/synaptic-deep" }
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
