[package]
name = "synapse-callbacks"
description = "Callback handlers: RecordingCallback, TracingCallback, CompositeCallback"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
synapse-core = { path = "../synapse-core" }
