[package]
name = "synaptic-callbacks"
description = "Callback handlers: RecordingCallback, TracingCallback, CompositeCallback"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
synaptic-core = { version = "0.1.0", path = "../synapse-core" }
