[package]
name = "synapse-chains"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
synapse-core = { path = "../synapse-core" }
synapse-runnables = { path = "../synapse-runnables" }

[dev-dependencies]
tokio.workspace = true
