[package]
name = "synapse-embeddings"
description = "Embeddings trait with Fake, OpenAI, and Ollama providers"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
synapse-core = { path = "../synapse-core" }
synapse-models = { path = "../synapse-models" }

[dev-dependencies]
tokio.workspace = true
