[package]
name = "synapse-eval"
description = "Evaluation: ExactMatch, JsonValidity, Regex, EmbeddingDistance, LLMJudge evaluators"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
synapse-core = { path = "../synapse-core" }
synapse-embeddings = { path = "../synapse-embeddings" }
regex.workspace = true

[dev-dependencies]
tokio.workspace = true
synapse-models = { path = "../synapse-models" }
