[package]
name = "synapse-graph"
description = "LangGraph-style state machine: StateGraph, CompiledGraph, ReAct agent, checkpointing"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
async-stream.workspace = true
base64.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
synapse-core = { path = "../synapse-core" }
synapse-tools = { path = "../synapse-tools" }

[dev-dependencies]
tokio.workspace = true
synapse-models = { path = "../synapse-models" }
