[package]
name = "synapse-models"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
async-stream.workspace = true
eventsource-stream.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
synapse-core = { path = "../synapse-core" }

[dev-dependencies]
tokio.workspace = true
futures.workspace = true
