[package]
name = "synaptic-models"
description = "LLM provider adapters (OpenAI, Anthropic, Gemini, Ollama) with streaming and wrappers"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
async-stream.workspace = true
eventsource-stream.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
synaptic-core = { version = "0.1.0", path = "../synapse-core" }

[dev-dependencies]
tokio.workspace = true
futures.workspace = true
