[package]
name = "synapse-parsers"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
synapse-core = { path = "../synapse-core" }
synapse-runnables = { path = "../synapse-runnables" }

[dev-dependencies]
tokio.workspace = true
