[package]
name = "synapse-parsers"
description = "Output parsers: String, JSON, Structured, List, Enum — all composable as Runnable"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
synapse-core = { path = "../synapse-core" }
synapse-runnables = { path = "../synapse-runnables" }

[dev-dependencies]
tokio.workspace = true
synapse-models = { path = "../synapse-models" }
