[package]
name = "synapse-prompts"
description = "Prompt templates: ChatPromptTemplate, FewShotChatMessagePromptTemplate"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
synapse-core = { path = "../synapse-core" }
synapse-embeddings = { path = "../synapse-embeddings" }
synapse-runnables = { path = "../synapse-runnables" }

[dev-dependencies]
tokio.workspace = true
