[package]
name = "synaptic-prompts"
description = "Prompt templates: ChatPromptTemplate, FewShotChatMessagePromptTemplate"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
synaptic-core = { version = "0.1.0", path = "../synapse-core" }
synaptic-embeddings = { version = "0.1.0", path = "../synapse-embeddings" }
synaptic-runnables = { version = "0.1.0", path = "../synapse-runnables" }

[dev-dependencies]
tokio.workspace = true
