[package]
name = "synapse-retrieval"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
synapse-core = { path = "../synapse-core" }
synapse-embeddings = { path = "../synapse-embeddings" }

[dev-dependencies]
tokio.workspace = true
synapse-models = { path = "../synapse-models" }
