[package]
name = "synaptic-retrieval"
description = "Document retrieval: BM25, MultiQuery, Ensemble, Compression, SelfQuery, ParentDocument"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
synaptic-core = { version = "0.1.0", path = "../synapse-core" }
synaptic-embeddings = { version = "0.1.0", path = "../synapse-embeddings" }

[dev-dependencies]
tokio.workspace = true
synaptic-models = { version = "0.1.0", path = "../synapse-models" }
