[package]
name = "synaptic-vectorstores"
description = "Vector store trait with in-memory cosine similarity implementation"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
synaptic-core = { version = "0.1.0", path = "../synapse-core" }
synaptic-embeddings = { version = "0.1.0", path = "../synapse-embeddings" }
synaptic-retrieval = { version = "0.1.0", path = "../synapse-retrieval" }

[dev-dependencies]
tokio.workspace = true
