[package]
name = "synaptic"
description = "A Rust agent framework with LangChain-compatible architecture"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
synaptic-core = { version = "0.1.0", path = "../synapse-core" }
synaptic-models = { version = "0.1.0", path = "../synapse-models", optional = true }
synaptic-runnables = { version = "0.1.0", path = "../synapse-runnables", optional = true }
synaptic-prompts = { version = "0.1.0", path = "../synapse-prompts", optional = true }
synaptic-parsers = { version = "0.1.0", path = "../synapse-parsers", optional = true }
synaptic-tools = { version = "0.1.0", path = "../synapse-tools", optional = true }
synaptic-memory = { version = "0.1.0", path = "../synapse-memory", optional = true }
synaptic-callbacks = { version = "0.1.0", path = "../synapse-callbacks", optional = true }
synaptic-retrieval = { version = "0.1.0", path = "../synapse-retrieval", optional = true }
synaptic-loaders = { version = "0.1.0", path = "../synapse-loaders", optional = true }
synaptic-splitters = { version = "0.1.0", path = "../synapse-splitters", optional = true }
synaptic-embeddings = { version = "0.1.0", path = "../synapse-embeddings", optional = true }
synaptic-vectorstores = { version = "0.1.0", path = "../synapse-vectorstores", optional = true }
synaptic-graph = { version = "0.1.0", path = "../synapse-graph", optional = true }
synaptic-cache = { version = "0.1.0", path = "../synapse-cache", optional = true }
synaptic-eval = { version = "0.1.0", path = "../synapse-eval", optional = true }

[features]
default = ["models", "runnables", "prompts", "parsers", "tools", "callbacks"]

# Fine-grained features (one per sub-crate)
models = ["dep:synaptic-models"]
runnables = ["dep:synaptic-runnables"]
prompts = ["runnables", "embeddings", "dep:synaptic-prompts"]
parsers = ["runnables", "dep:synaptic-parsers"]
tools = ["dep:synaptic-tools"]
memory = ["runnables", "dep:synaptic-memory"]
callbacks = ["dep:synaptic-callbacks"]
retrieval = ["embeddings", "dep:synaptic-retrieval"]
loaders = ["retrieval", "dep:synaptic-loaders"]
splitters = ["retrieval", "dep:synaptic-splitters"]
embeddings = ["models", "dep:synaptic-embeddings"]
vectorstores = ["embeddings", "retrieval", "dep:synaptic-vectorstores"]
graph = ["tools", "dep:synaptic-graph"]
cache = ["embeddings", "dep:synaptic-cache"]
eval = ["embeddings", "dep:synaptic-eval"]

# Composite features (by use-case)
agent = ["default", "graph", "memory"]
rag = ["default", "retrieval", "loaders", "splitters", "embeddings", "vectorstores"]
full = ["default", "agent", "rag", "cache", "eval"]

[dev-dependencies]
tokio.workspace = true
