[package]
name = "synaptic-callbacks"
description = "Callback handlers: RecordingCallback, TracingCallback, CompositeCallback"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
otel = ["dep:opentelemetry"]

[dependencies]
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
synaptic-core = { version = "0.2", path = "../synaptic-core" }
opentelemetry = { version = "0.27", optional = true, features = ["trace"] }
