[package]
name = "synaptic-confluence"
description = "Confluence document loader for Synaptic"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
reqwest = { workspace = true }
serde_json.workspace = true
serde.workspace = true
synaptic-core = { version = "0.2", path = "../synaptic-core" }

[dev-dependencies]
tokio.workspace = true
