[package]
name = "synaptic-core"
description = "Core traits and types for Synaptic: ChatModel, Message, Tool, SynapticError"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
async-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
schemars = { workspace = true, optional = true }

[features]
schemars = ["dep:schemars"]

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
