[package]
name = "synaptic-embeddings"
description = "Embeddings trait with Fake, OpenAI, and Ollama providers"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
synaptic-core = { version = "0.2", path = "../synaptic-core" }
synaptic-models = { version = "0.2", path = "../synaptic-models" }

[dev-dependencies]
tokio.workspace = true
