[package]
name = "synaptic-embeddings"
description = "Embeddings trait with Fake and CacheBacked providers"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait.workspace = true
tokio.workspace = true
synaptic-core = { version = "0.2", path = "../synaptic-core" }

[dev-dependencies]
tokio.workspace = true
