[package]
name = "synaptic-eval"
description = "Evaluation: ExactMatch, JsonValidity, Regex, EmbeddingDistance, LLMJudge evaluators"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
synaptic-core = { version = "0.2", path = "../synaptic-core" }
synaptic-embeddings = { version = "0.2", path = "../synaptic-embeddings" }
regex.workspace = true

[dev-dependencies]
tokio.workspace = true
synaptic-models = { version = "0.2", path = "../synaptic-models" }
