[package]
name = "synaptic-fireworks"
description = "Fireworks AI integration for Synaptic — ultra-fast open model inference"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait.workspace = true
synaptic-core = { version = "0.2", path = "../synaptic-core" }
synaptic-models = { version = "0.2", path = "../synaptic-models" }
synaptic-openai = { version = "0.2", path = "../synaptic-openai" }

[dev-dependencies]
tokio.workspace = true
serde_json.workspace = true
